feature: Добавил middleware для проверки действительности токена, подправил создание новости
